test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/bitshift_void.plx
#  Can't perform bitshift operations with void operands
pub fn f(none) none {
    return none
}

pub fn main(none) i32 {
    x: i32 = 10
    x << f()
    return nil
}
